gitops/manifests/echo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app
  namespace: echo-app
spec:
  selector:
    app: echo-app
  ports:
    - port: 80
      targetPort: 5678
