gitops/manifests/echo-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app
  namespace: echo-app
spec:
  parentRefs:
    - name: echo-gateway
  rules:
    - backendRefs:
        - name: echo-app
          port: 80
